# glytrait

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_glypy.ipynb  tox.ini
.github/workflows/: CI.yml  coveralls.yml
example_data/: compositions.csv  structures.csv
example_notebooks/: basics.ipynb  machine_learning.ipynb
glytrait/: __init__.py  analysis.py  cli.py  colinearity.py  config.py  core.py  database.py  exception.py  formula.py  glycan.py  interface.py  io.py  meta_property.py  preprocessing.py  stats.py  trait.py  trait_forluma.txt  trait_formula_template.txt  utils.py  workflow.py
glytrait/analysis/: __init__.py  diff.py  roc.py
glytrait/gui/: __init__.py  gui.py  gui.ui  mainwindow.py  mainwindow_mac.py  mainwindow_win.py  win.ui
glytrait/resources/: serum_structures.csv  struc_formula.txt
glytrait/streamlit/: Upload_File.py  utils.py
glytrait/streamlit/pages/: 1_Results.py  2_Analysis.py
src/: glytrait_cli.py
src/glytrait/: __init__.py  api.py  cli.py  config.py  data_export.py  data_input.py  diff.py  exception.py  formula.py  glycan.py  io.py  load_data.py  meta_property.py  post_filtering.py  preprocessing.py  stat.py  trait.py  workflow.py
src/glytrait/resources/: IgG_structures.csv  comp_formula.txt  struc_formula.txt  trait_formula_template.txt
src/glytrait_streamlit/: app.py
src/glytrait_streamlit/resources/: trait_definitions.tsv
tests/: conftest.py  glycoct.py  test_analysis.py  test_api.py  test_cli.py  test_colinearity.py  test_config.py  test_core.py  test_data_export.py  test_database.py  test_formula.py  test_glycan.py  test_io.py  test_load_data.py  test_meta_property.py  test_post_filtering.py  test_preprocessing.py  test_stats.py  test_trait.py  test_workflow.py
tests/integration/: test_api.py  test_cli.py  test_formula.py  test_post_filtering.py  test_stat.py  test_trait_calculation.py
tests/integration/data/: abundance.csv  formulas.txt  groups.csv  meta_properties.csv
tests/unit/: conftest.py  glycoct.py  test_api.py  test_cli.py  test_data_export.py  test_diff.py  test_formula.py  test_glycan.py  test_load_data.py  test_meta_property.py  test_post_filtering.py  test_preprocessing.py  test_stat.py  test_trait.py
