[tool.poetry]
name = "glytrait"
version = "0.4.1"
description = ""
authors = ["fubin1999 <65430559+fubin1999@users.noreply.github.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "default"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
glypy = "^1.0.11"
attrs = "^23.1.0"
pandas = "^2.0.1"
numpy = "^1.25.2"
openpyxl = "^3.1.2"
click = "^8.1.3"
emoji = "^2.7.0"
pingouin = "^0.5.3"
plotly = "^5.16.0"
dash-bio = "^1.0.2"

[tool.poetry.group.streamlit]
optional = true

[tool.poetry.group.streamlit.dependencies]
streamlit = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.6"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
glytrait = "glytrait.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
